--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+/*Fonts*/
+
 @font-face {
   font-family: "PT Sans";
   font-weight: 400;
@@ -14,12 +16,24 @@
   src: url("../fonts/ptsans-700.woff2") format("woff2");
 }
 
+/*Global styles*/
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+body {
+  min-block-size: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
   margin: 0;
-  padding: 0;
+  background-color: #f2f2f2;
+  color: #333333;
+  font-family: PT Sans;
+  font-size: 18px;
+  line-height: 21px;
 }
 
 .visually-hidden {
@@ -62,30 +76,6 @@ img {
   background-color: #82b3d3;
 }
 
-.page {
-  block-size: 100%;
-  background-color: #f2f2f2;
-  font-family: PT Sans;
-  font-size: 18px;
-  line-height: 21px;
-}
-
-.page__body {
-  inline-size: 1200px;
-  min-block-size: 100%;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  margin-inline: auto;
-  background-color: #ffffff;
-  color: #000000;
-  box-shadow: 0 0 15px 0 #00000033;
-}
-
-.wrapper {
-  inline-size: 1200px;
-  margin-inline: auto;
-}
-
 .first-title {
   font-size: 60px;
   line-height: 78px;
@@ -105,6 +95,15 @@ img {
   font-weight: 700;
   text-transform: uppercase;
 }
+
+.page-body {
+  inline-size: 1200px;
+  margin-inline: auto;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px 0 #00000033;
+}
+
+/*Header*/
 
 .page-header {
   padding-inline: 70px;
@@ -134,22 +133,31 @@ img {
   gap: 30px;
 }
 
-.site-nav {
+.main-nav__list {
+  margin: 0;
+}
+
+.site-nav,
+.user-nav {
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
   list-style-type: none;
+}
+
+.site-nav {
+  color: #000000;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
 }
 
 .user-nav {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
   margin-inline-start: auto;
   color: #ffffff;
 }
+
+/*Invite*/
 
 .invite {
   position: relative;
@@ -164,7 +172,10 @@ img {
 
 .invite__img {
   display: block;
+  inline-size: 100%;
 }
+
+/*Advantages*/
 
 .advantages {
   background-color: #ffffff;
@@ -172,12 +183,15 @@ img {
 }
 
 .advantages__slogan {
+  margin: 0;
+  margin-block-end: 25px;
   padding-inline: 290px;
-  padding-block-start: 59px;
+  padding-block-start: 69px;
+  color: #000000;
 }
 
 .advantages__intro {
-  color: #333333;
+  margin: 0;
   padding-inline: 275px;
   padding-block-end: 90px;
   font-size: 22px;
@@ -188,6 +202,8 @@ img {
   display: grid;
   grid-template-columns: repeat(3, 400px);
   grid-auto-flow: dense;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -196,27 +212,44 @@ img {
 }
 
 .advantages__title {
+  margin: 0;
   margin-block-end: 62px;
   padding-inline: 29px;
+  color: #000000;
 }
 
 .advantages__text {
-  color: #333333;
+  margin: 0;
+}
+
+.advantages__item:not(:has(.advantages__img)):nth-of-type(odd) {
+  background-color: #83B3D31F;
+}
+
+advantages__item:not(:has(.advantages__img)):nth-of-type(even) {
+  background-color: #83B3D333;
 }
 
 .advantages__item:has(.advantages__img) {
   display: flex;
   grid-column: span 3;
   background-color: #82b3d3;
-  color: #ffffff;
 }
 
 .advantages__item--reverse {
   flex-direction: row-reverse;
 }
 
+/*.advantages__item:has(.advantages__img):nth-of-type(odd) {
+  flex-direction: row-reverse;
+}*/
+
 .advantages__item:has(.advantages__img) .advantages__description {
   padding-block: 102px;
+}
+
+.advantages__item:has(.advantages__img) .advantages__title {
+  color: #ffffff;
 }
 
 .advantages__item:has(.advantages__img) .advantages__text {
@@ -228,18 +261,23 @@ img {
   inline-size: 800px;
 }
 
+/*Services*/
+
 .services {
   background-color: #ffffff;
   text-align: center;
 }
 
 .services__slogan {
+  margin: 0;
+  margin-block-end: 20px;
   padding-inline: 348px;
   padding-block-start: 64px;
+  color: #000000;
 }
 
 .services__intro {
-  color: #333333;
+  margin: 0;
   padding-inline: 355px;
   padding-block-end: 64px;
   font-size: 22px;
@@ -250,6 +288,8 @@ img {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-flow: dense;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -267,12 +307,16 @@ img {
 }
 
 .services__title {
+  margin: 0;
   margin-block-end: 30px;
+  color: #000000;
 }
 
 .services__description {
-  color: #333333;
+  margin: 0;
 }
+
+/*Search*/
 
 .search {
   padding: 96px 304px;
@@ -281,15 +325,19 @@ img {
 }
 
 .search__title {
+  margin: 0;
   margin-block-end: 20px;
+  color: #000000;
 }
 
 .search__text {
+  margin: 0;
   margin-block-end: 54px;
-  color: #333333;
   font-size: 22px;
   line-height: 26px;
 }
+
+/*Subscribe*/
 
 .subscribe {
   padding-inline: 258px;
@@ -301,17 +349,24 @@ img {
   background-color: #333333;
   background-image: url("../images/subscribe-background.jpg");
   background-size: cover;
-  color: #ffffff;
 }
 
 .subscribe__title {
+  margin: 0;
   margin-block-end: 20px;
+  color: #000000;
 }
 
 .subscribe__text {
+  margin: 0;
   margin-block-end: 54px;
   font-size: 22px;
   line-height: 26px;
+}
+
+.subscribe--bg .subscribe__title,
+.subscribe--bg .subscribe__text {
+  color: #ffffff;
 }
 
 .subscribe__form {
@@ -327,8 +382,11 @@ img {
 }
 
 .subscribe__button {
+  padding-inline: 38px;
   border-radius: 0 4px 4px 0;
 }
+
+/*Footer*/
 
 .page-footer {
   display: flex;
@@ -342,6 +400,8 @@ img {
 
 .socials {
   display: flex;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
