--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,37 +222,30 @@ img {
   margin: 0;
 }
 
-.advantages__item:not(:has(.advantages__img)):nth-of-type(odd) {
-  background-color: #83B3D31F;
+.advantages__item:nth-of-type(odd) {
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
-advantages__item:not(:has(.advantages__img)):nth-of-type(even) {
-  background-color: #83B3D333;
+.advantages__item:nth-of-type(even) {
+  background: rgba(131, 179, 211, 0.12);
 }
 
 .advantages__item:has(.advantages__img) {
   display: flex;
   grid-column: span 3;
   background-color: #82b3d3;
+  color: #ffffff;
 }
 
-.advantages__item--reverse {
+.advantages__list :nth-child(even of .advantages__item:has(.advantages__img)){
   flex-direction: row-reverse;
 }
-
-/*.advantages__item:has(.advantages__img):nth-of-type(odd) {
-  flex-direction: row-reverse;
-}*/
 
 .advantages__item:has(.advantages__img) .advantages__description {
   padding-block: 102px;
 }
 
 .advantages__item:has(.advantages__img) .advantages__title {
-  color: #ffffff;
-}
-
-.advantages__item:has(.advantages__img) .advantages__text {
   color: #ffffff;
 }
 
