--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,7 +237,7 @@ img {
   color: #ffffff;
 }
 
-.advantages__list :nth-child(even of .advantages__item:has(.advantages__img)){
+.advantages__list :nth-child(even of .advantages__item:has(.advantages__img)) {
   flex-direction: row-reverse;
 }
 
@@ -404,4 +404,196 @@ img {
   line-height: 40px;
   font-style: normal;
   text-decoration: none;
+}
+
+/*Catalog-header*/
+
+.catalog-header {
+  padding-inline: 70px;
+  padding-block: 35px 70px;
+  background-color: #83B3D333;
+  background-image: url("../images/catalog-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
+  color: #ffffff;
+}
+
+.catalog-header__title {
+  margin-block: 0 8px;
+
+}
+
+.catalog-header__breadcrumbs {
+  margin-block: 0 40px;
+}
+
+.breadcrumbs {
+  display: flex;
+  padding: 0;
+  list-style-type: none;
+}
+
+.breadcrumbs__link {
+  color: inherit;
+  text-decoration: none;
+}
+
+/*Filter*/
+
+.catalog-header__form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.filter__group {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.filter__title {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.filter__list {
+  margin-block: 0;
+  padding-inline: 0;
+  list-style-type: none;
+  line-height: 23px;
+}
+
+
+.filter__buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.filter__button {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/*Catalog*/
+
+.catalog {
+  padding-inline: 70px;
+  padding-block: 50px 60px;
+}
+
+/*Sorting*/
+
+.catalog__header {
+  margin-block-end: 40px;
+}
+
+.sorting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sorting__title {
+  margin-block: 6px;
+}
+
+/*Products*/
+
+.catalog__products {
+  margin-block: 0 80px;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  gap: 20px;
+  padding-inline: 0;
+  list-style-type: none;
+}
+
+/*Card*/
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 20px;
+}
+
+.card__link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.card__img {
+  display: block;
+  inline-size: 300px;
+}
+
+.card__title {
+  margin-block: 16px 0;
+  font-size: 24px;
+  list-style: 28px;
+  font-weight: 700;
+}
+
+.card__description {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.card__buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.card__button {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.card__metrics {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+/*Pagination*/
+
+.catalog__pagination {
+  margin-block: 0;
+}
+
+.pagination {
+  display: flex;
+  gap: 8px;
+  padding-inline: 0;
+  list-style-type: none;
+}
+
+.pagination__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 60px;
+  block-size: 60px;
+  border-radius: 4px;
+  background-color: #82b3d3;
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.pagination__link--not-link {
+  margin-block: 0;
 }
