--- a/styles/styles.css
+++ b/styles/styles.css
@@ -170,11 +170,19 @@ img {
 
 :is(.site-nav, .user-nav) {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
+  align-items: center;
   padding: 0;
   list-style-type: none;
 }
+
+:is(.site-nav__link, .user-nav__link) {
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+}
+
+/*Site-nav*/
 
 .site-nav {
   font-size: 20px;
@@ -187,13 +195,24 @@ img {
   padding: 20px 16px;
 }
 
-.user-nav {
-  margin-inline-start: auto;
+.site-nav__link--current {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    inline-size: 100%;
+    block-size: 2px;
+    background-color: #756257;
+  }
 }
 
-:is(.site-nav__link, .user-nav__link) {
-  color: inherit;
-  text-decoration: none;
+/*User-nav*/
+
+.user-nav {
+  margin-inline-start: auto;
 }
 
 .user-nav__item:not(:last-of-type) .user-nav__link {
@@ -212,6 +231,21 @@ img {
 
 .user-nav__link--like {
   background-image: url("../icons/like.svg");
+}
+
+.user-nav__likes-badge {
+  position: absolute;
+  left: 20px;
+  top: 11px;
+  padding-inline: 4px;
+  padding-block: 5px;
+  border-radius: 10px;
+  background-color: #7db54f;
+  color: #ffffff;
+  font-size: 10px;
+  line-height: 10px;
+  text-align: center;
+
 }
 
 /*.user-nav__item:last-of-type {
@@ -280,18 +314,7 @@ img {
   list-style-type: none;
 }
 
-.advantages__description {
-  padding: 112px 85px;
-}
-
-.advantages__title {
-  margin-block: 0 62px;
-  padding-inline: 29px;
-}
-
-.advantages__text {
-  margin: 0;
-}
+/*Advantages item*/
 
 .advantages__item:nth-of-type(odd) {
   background-color: rgba(131, 179, 211, 0.2);
@@ -300,6 +323,32 @@ img {
 .advantages__item:nth-of-type(even) {
   background: rgba(131, 179, 211, 0.12);
 }
+
+.advantages__description {
+  padding: 112px 85px;
+}
+
+.advantages__title {
+  position: relative;
+  margin-block: 0 62px;
+  padding-inline: 29px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 86px;
+    left: 85px;
+    inline-size: 60px;
+    block-size: 2px;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+.advantages__text {
+  margin: 0;
+}
+
+/*Advantages item with photo*/
 
 .advantages__item:has(.advantages__img) {
   display: flex;
@@ -318,6 +367,10 @@ img {
 
 .advantages__item:has(.advantages__img) .advantages__title {
   color: #ffffff;
+
+  &::after {
+    background-color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 .advantages__img {
@@ -452,12 +505,15 @@ img {
   color: #000000;
 }
 
+/*Socials*/
+
 .page-footer__list {
   margin-block: 5px;
 }
 
 .socials {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   list-style-type: none;
 }
@@ -496,6 +552,12 @@ img {
   background-color: #68a2ca;
 }
 
+/*Phone*/
+
+.page-footer__address {
+  min-inline-size: 331px;
+}
+
 .page-footer__phone {
   color: inherit;
   font-size: 40px;
@@ -503,6 +565,8 @@ img {
   font-style: normal;
   text-decoration: none;
 }
+
+/*Copyright*/
 
 .page-footer__copyright {
   position: relative;
@@ -542,12 +606,15 @@ img {
   margin-block: 0 8px;
 }
 
+/*Breadcrumbs*/
+
 .catalog-header__breadcrumbs {
   margin-block: 0 40px;
 }
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   list-style-type: none;
 }
@@ -658,11 +725,12 @@ img {
 }
 
 .sorting__title {
+  min-inline-size: 338px;
   margin-block: 6px;
 }
 
 .sorting__select {
-  inline-size: 292px;
+  min-inline-size: 292px;
   margin-inline-start: auto;
   padding-inline: 20px 52px;
   padding-block: 14px;
@@ -676,8 +744,11 @@ img {
   appearance: none;
 }
 
+/*Sorting-view*/
+
 .sorting__view {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
 }
 
@@ -780,6 +851,7 @@ img {
 
 .pagination {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
   padding-inline: 0;
   list-style-type: none;
@@ -787,8 +859,8 @@ img {
 
 .pagination__link {
   display: flex;
-  flex-wrap: wrap;
-  place-content: center;
+  justify-content: center;
+  align-items: center;
   inline-size: 60px;
   block-size: 60px;
   border-radius: 4px;
@@ -797,9 +869,16 @@ img {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
+  text-align: center;
   text-decoration: none;
+}
+
+.pagination__link--current {
+  background-color: #f2f2f2;
+  color: #000000;
 }
 
 .pagination__link--not-link {
   margin-block: 0;
+  background-color: #ffffff;
 }
