--- a/styles/styles.css
+++ b/styles/styles.css
@@ -669,6 +669,7 @@ img {
 }
 
 .filter__title {
+  margin-block: 0 32px;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -679,6 +680,47 @@ img {
   padding-inline: 0;
   list-style-type: none;
   line-height: 23px;
+}
+
+.filter__item {
+  line-height: 23px;
+}
+
+.filter__item:not(:last-child) {
+  margin-block-end: 16px;
+}
+
+/*Control*/
+
+.control__label {
+  position: relative;
+  padding-inline-start: 36px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    inline-size: 20px;
+    block-size: 20px;
+    border-radius: 4px;
+    background-color: #ffffff;
+  }
+}
+
+.control__input[type="checkbox"]:checked + .control__label::before {
+  background-image: url("../icons/checkbox.svg");
+  background-repeat: no-repeat;
+}
+
+.control__input[type="radio"] + .control__label::before {
+  border-radius: 20px;
+}
+
+.control__input[type="radio"]:checked + .control__label::before {
+  background-image: url("../icons/radio.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .range {
@@ -698,6 +740,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  padding-block-start: 56px;
 }
 
 .filter__button {
