--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@
 }
 
 body {
-  min-inline-size: 1280px;
+  min-inline-size: 1260px;
   block-size: 100%;
   margin: 0;
   background-color: #f2f2f2;
@@ -37,6 +37,25 @@ body {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 18px;
   line-height: 21px;
+}
+
+/*Sticky-footer*/
+
+.page-body {
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  inline-size: 1200px;
+  min-block-size: 100%;
+  margin-inline: auto;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px 0 #00000033;
+}
+
+/*Wrapper*/
+
+.wrapper {
+  inline-size: 1060px;
+  margin-inline: auto;
 }
 
 .visually-hidden {
@@ -91,11 +110,11 @@ img {
 
 .button--basic {
   background-color: #756157;
+}
 
-  &:hover,
-  &:focus {
-    background-color: #615048;
-  }
+.button--basic:hover,
+.button--basic:focus {
+  background-color: #615048;
 }
 
 .button--second {
@@ -148,6 +167,15 @@ img {
 
 .input::placeholder {
   font-family: inherit;
+}
+
+.input:hover,
+.input:focus {
+  background-color: #e6e6e6;
+}
+
+.input:focus {
+  outline: 3px solid #83b3d3;
 }
 
 /*Titles*/
@@ -255,10 +283,22 @@ img {
   border-block-end: 2px solid transparent;
 }
 
+.site-nav__link:hover,
+.site-nav__link:focus {
+  color: #756157;
+}
+
+.site-nav__link:focus {
+  outline: none;
+}
+
+.site-nav__link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
 .site-nav__link--current {
   border-block-end-color: #756257;
 }
-
 
 /*User-nav*/
 
@@ -266,26 +306,48 @@ img {
   margin-inline-start: auto;
 }
 
-.user-nav__item:not(:last-of-type) .user-nav__link {
+.user-nav__link {
+  position: relative;
   display: block;
   min-inline-size: 44px;
   min-block-size: 64px;
-
-  background-repeat: no-repeat;
-  background-position: left 12px top 22px;
-  background-size: 20px 20px;
 }
 
-.user-nav__link--search {
-  background-image: url("../icons/seach.svg");
+.user-nav__link::after {
+  position: absolute;
+  content: "";
+  inline-size: 44px;
+  block-size: 64px;
+  background-color: #000000;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: 20px 20px;
 }
 
-.user-nav__link--like {
-  background-image: url("../icons/like.svg");
+.user-nav__link:hover::after,
+.user-nav__link:focus::after {
+  background-color: #756157;
+}
+
+.user-nav__link:focus {
+  outline: none;
+}
+
+.user-nav__link:active::after {
+  background-color: rgba(117, 97, 87, 0.3);
+}
+
+.user-nav__link--search::after {
+  mask-image: url("../icons/seach.svg");
+}
+
+.user-nav__link--like::after {
+  mask-image: url("../icons/like.svg");
 }
 
 .user-nav__likes-badge {
   position: absolute;
+  z-index: 2;
   left: 20px;
   top: 11px;
   padding-inline: 4px;
@@ -296,12 +358,7 @@ img {
   font-size: 10px;
   line-height: 10px;
   text-align: center;
-
 }
-
-/*.user-nav__item:last-of-type {
-  margin-inline-start: 20px;
-}*/
 
 .user-nav__button {
   margin-inline-start: 20px;
@@ -721,6 +778,7 @@ img {
   flex-wrap: wrap;
   padding: 0;
   list-style-type: none;
+  font-size: 16px;
 }
 
 .breadcrumbs__item:not(:last-of-type) {
@@ -738,14 +796,48 @@ img {
   text-decoration: none;
 }
 
+.breadcrumbs__link:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs__link:focus {
+  outline: none;
+}
+
+.breadcrumbs__link:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .breadcrumbs__item:first-of-type .breadcrumbs__link {
+  position: relative;
+  display: block;
   inline-size: 13px;
   block-size: 21px;
   padding-block: 3px;
-  background-image: url("../icons/home.svg");
-  background-repeat: no-repeat;
-  background-position: center top 3px;
-  background-size: 12px 12px;
+}
+
+.breadcrumbs__item:first-of-type .breadcrumbs__link::after {
+  position: absolute;
+  content: "";
+  inline-size: 13px;
+  block-size: 21px;
+  background-color: #ffffff;
+  mask-image: url("../icons/home.svg");
+  mask-repeat: no-repeat;
+  mask-position: center top;
+  mask-size: 12px 12px;
+}
+
+.breadcrumbs__item:first-of-type .breadcrumbs__link:hover::after {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs__item:first-of-type .breadcrumbs__link:focus::after {
+  outline: none;
+}
+
+.breadcrumbs__item:first-of-type .breadcrumbs__link:active::after {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 /*Filter*/
@@ -758,7 +850,7 @@ img {
 }
 
 .filter__group {
-  min-inline-size: 150px;
+  inline-size: 150px;
   margin: 0;
   padding: 0;
   border: none;
@@ -796,14 +888,13 @@ img {
 .control__label::before {
   position: absolute;
   content: "";
-  top: 0;
+  top: 1px;
   left: 0;
   inline-size: 20px;
   block-size: 20px;
   border-radius: 4px;
   background-color: #ffffff;
 }
-
 
 .control__input[type="checkbox"]:checked + .control__label::before {
   background-image: url("../icons/checkbox.svg");
@@ -820,6 +911,24 @@ img {
   background-position: center;
 }
 
+.control__label:hover {
+  opacity: 0.6;
+}
+
+.control__input:focus + .control__label::before {
+  outline: 3px solid #83b3d3;
+}
+
+/*.control__input:active + .control__label {
+  opacity: 0.3;
+}*/
+
+.control__label:active {
+  opacity: 0.3;
+}
+
+/*Range*/
+
 .range {
   margin-inline-start: auto;
 }
@@ -834,6 +943,7 @@ img {
 .range__input {
   inline-size: 143px;
   font-weight: 700;
+  appearance: none;
 }
 
 .range__input--min {
@@ -865,6 +975,20 @@ img {
   border: none;
   border-radius: 5px;
   background-color: #ffffff;
+}
+
+.range__toggle:hover,
+.range__toggle:focus {
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
+}
+
+.range__toggle:focus {
+  outline: 3px solid #83b3d3;
+}
+
+.range__toggle:active {
+  outline-width: 2px;
+  box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.4);
 }
 
 .range__toggle--min {
@@ -930,6 +1054,15 @@ img {
   appearance: none;
 }
 
+.sorting__select:hover,
+.sorting__select:focus {
+  outline-color: #68a2ca;
+}
+
+.sorting__select:disabled {
+  opacity: 0.3;
+}
+
 /*Sorting-view*/
 
 .sorting__view {
@@ -959,7 +1092,6 @@ img {
   mask-size: 16px 14px;
 }
 
-
 .sorting__toggle--table::after {
   mask-image: url("../icons/table-view.svg");
 }
@@ -973,7 +1105,20 @@ img {
 }
 
 .sorting__toggle--current {
-  outline: 2px solid #000000;
+  outline-color: #000000;
+}
+
+.sorting__toggle:hover,
+.sorting__toggle:active {
+  outline-color: #000000;
+}
+
+.sorting__toggle:focus {
+  outline-color: #68a2ca;
+}
+
+.sorting__toggle:active {
+  outline-color: #000000;
 }
 
 /*Products*/
@@ -1081,6 +1226,20 @@ img {
   font-weight: 700;
   text-align: center;
   text-decoration: none;
+}
+
+.pagination__link:hover,
+.pagination__link:focus {
+  background-color: #68a2ca;
+  border: 1px solid #82b3d3;
+}
+
+.pagination__link:focus {
+  outline: none;
+}
+
+.pagination__link:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .pagination__link--current {
