--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,14 +208,12 @@ img {
 /*Header*/
 
 .page-header {
-  position: relative;
   z-index: 2;
   color: #000000;
 }
 
 .page-header__nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 30px;
 }
@@ -248,7 +246,6 @@ img {
   position: relative;
   color: inherit;
   text-decoration: none;
-
 }
 
 /*Site-nav*/
@@ -263,8 +260,7 @@ img {
 }
 
 .site-nav__link {
-  padding-block: 20px 18px;
-  border-block-end: 2px solid transparent;
+  padding-block: 20px 20px;
 }
 
 .site-nav__link:hover,
@@ -281,7 +277,17 @@ img {
 }
 
 .site-nav__link--current {
-  border-block-end-color: #756257;
+  pointer-events: none;
+}
+
+.site-nav__link--current::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  inline-size: 100%;
+  block-size: 2px;
+  background-color: #756257;
 }
 
 /*User-nav*/
@@ -292,7 +298,6 @@ img {
 }
 
 .user-nav__link {
-  position: relative;
   display: block;
   min-inline-size: 44px;
   min-block-size: 64px;
@@ -346,8 +351,12 @@ img {
 }
 
 .user-nav__button {
-  margin-inline-start: 20px;
+  margin-inline: 20px;
   min-inline-size: 160px;
+}
+
+.user-nav__button:last-of-type {
+  margin-inline-end: 0;
 }
 
 /*Invite*/
@@ -450,9 +459,9 @@ img {
 /*Advantages item with photo*/
 
 .advantages__item:has(.advantages__img) {
+  grid-column: span 3;
   display: grid;
   grid-template-columns: subgrid;
-  grid-column: span 3;
   background-color: #82b3d3;
   color: #ffffff;
 }
@@ -740,8 +749,8 @@ img {
 
 .catalog-header {
   padding-block: 35px 70px;
-  background-color: #83B3D333;
-  background-image: url("../images/catalog-background.jpg");
+  background-color: #68a2ca;
+  background-image: url("../images/inner-background.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -781,7 +790,7 @@ img {
   text-decoration: none;
 }
 
-.breadcrumbs__link:hover {
+.breadcrumbs__link:not(:last-of-type):hover {
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -1213,14 +1222,18 @@ img {
   text-decoration: none;
 }
 
-.pagination__link:hover,
-.pagination__link:focus {
+.pagination__link:hover {
   background-color: #68a2ca;
   border: 1px solid #82b3d3;
 }
 
 .pagination__link:focus {
   outline: none;
+}
+
+.pagination__link:not(.pagination__link--current):focus {
+  background-color: #68a2ca;
+  border: 1px solid #82b3d3;
 }
 
 .pagination__link:active {
@@ -1230,6 +1243,7 @@ img {
 .pagination__link--current {
   background-color: #f2f2f2;
   color: #000000;
+  pointer-events: none;
 }
 
 .pagination__link--not-link {
